fix flickering no js view

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,26 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --theme-bgcolor: papayawhip;
+  --theme-header: #bb3c54;
+  --success-border: #679a19;
+  --error-border: red;
+}
+@media screen and (max-width: 400px) {
+  * {
+    /* --theme-bgcolor: coral; */
+    --theme-header: #bb3c54;
+    --success-border: #679a19;
+    --error-border: red;
+  }
+}
 /* import a custom font (Abel) but change the name to fattylee */
 @font-face {
   font-family: "fattylee";
   src: url(./Abel-Regular.ttf);
 }
-/*
- * successColor=#679a19
- * backgroundButton=#bb3c54
- * */
+
 body {
   margin: 0;
   padding: 0;
@@ -20,7 +31,7 @@ body {
   /* height: 100vh; */
   /* font-family: Arial, Helvetica, sans-serif; */
   font-family: Fattylee;
-  background: papayawhip;
+  background: var(--theme-bgcolor);
 }
 .nav {
   background: grey;
@@ -63,7 +74,7 @@ nav li.active a {
 }
 .header {
   padding: 20px 30px;
-  background: #bb3c54;
+  background: var(--theme-header);
   border-bottom: 1px solid grey;
 }
 .header h1 {
@@ -90,15 +101,15 @@ nav li.active a {
   border: 1px solid;
 }
 .form-control.success input {
-  border-color: #679a19;
-  outline-color: #679a19;
+  border-color: var(--success-border);
+  outline-color: var(--success-border);
 }
 .form-control input:focus {
   border-color: black;
 }
 .form-control.error input {
-  border-color: red;
-  outline-color: red;
+  border-color: var(--error-border);
+  outline-color: var(--error-border);
 }
 .form-control i {
   position: absolute;
@@ -107,16 +118,16 @@ nav li.active a {
   visibility: hidden;
 }
 .form-control.success i.fa-check-circle {
-  color: #679a19;
+  color: var(--success-border);
   visibility: visible;
 }
 .form-control.error i.fa-exclamation-circle {
-  color: red;
+  color: var(--error-border);
   visibility: visible;
 }
 .form-control small {
   position: absolute;
-  color: red;
+  color: var(--error-border);
   visibility: hidden;
 }
 .form-control.error small {
@@ -125,7 +136,7 @@ nav li.active a {
 
 .form [type="submit"] {
   color: white;
-  background: #bb3c54;
+  background: var(--theme-header);
   display: block;
   width: 100%;
   margin: 20px auto;
@@ -134,7 +145,7 @@ nav li.active a {
   text-transform: capitalize;
 }
 .form [type="submit"]:hover {
-  color: #bb3c54;
+  color: var(--theme-header);
   background: white;
 }
 /* Modal popup styling
@@ -160,7 +171,7 @@ nav li.active a {
   text-decoration: none;
   text-transform: uppercase;
   color: white;
-  background: #bb3c54;
+  background: var(--theme-header);
   display: inline-block;
   padding: 5px 10px;
   border-radius: 5px;
@@ -170,7 +181,7 @@ nav li.active a {
 }
 .modal a:hover {
   background: white;
-  color: #bb3c54;
+  color: var(--theme-header);
 }
 .grid-box {
   display: flex;
